src/test/deca/context/valid/print/println-float.deca
// Description:
//    Programme minimaliste utilisant println.
//
// Resultats:
//    2.3

{
    println(2.3);
}