src/test/deca/context/invalid/print/print-r.deca
// Description:
//    Programme minimaliste utilisant print.
//
// Resultats:
//    erreur ligne 8

{
    print("\r");
}
